--- a/mods/ts/rules/defaults.yaml
+++ b/mods/ts/rules/defaults.yaml
@@ -192,115 +192,172 @@
 
 ^2x1Shape:
 	HitShape:
+		TargetableOffsets: 0,0,418
+		TargetableCellAdditionalOffset: 0,0,418
 		Type: Rectangle
+			VerticalTopOffset: 762
 			TopLeft: -1024, -512
 			BottomRight: 1024, 512
 
 ^1x2Shape:
 	HitShape:
+		TargetableOffsets: 0,0,418
+		TargetableCellAdditionalOffset: 0,0,418
 		Type: Rectangle
+			VerticalTopOffset: 762
 			TopLeft: -512, -1024
 			BottomRight: 512, 1024
 
 ^2x2Shape:
 	HitShape:
+		TargetableOffsets: 0,0,418
+		TargetableCellAdditionalOffset: 0,0,418
 		Type: Rectangle
+			VerticalTopOffset: 762
 			TopLeft: -1024, -1024
 			BottomRight: 1024, 1024
 
 ^1x3Shape:
 	HitShape:
+		TargetableOffsets: 0,0,418
+		TargetableCellAdditionalOffset: 0,0,418
 		Type: Rectangle
+			VerticalTopOffset: 762
 			TopLeft: -512, -1536
 			BottomRight: 512, 1536
 
 ^3x1Shape:
 	HitShape:
+		TargetableOffsets: 0,0,418
+		TargetableCellAdditionalOffset: 0,0,418
 		Type: Rectangle
+			VerticalTopOffset: 762
 			TopLeft: -1536, -512
 			BottomRight: 1536, 512
 
 ^3x2Shape:
 	HitShape:
+		TargetableOffsets: 0,0,418
+		TargetableCellAdditionalOffset: 0,0,418
 		Type: Rectangle
+			VerticalTopOffset: 762
 			TopLeft: -1536, -1024
 			BottomRight: 1536, 1024
 
 ^2x3Shape:
 	HitShape:
+		TargetableOffsets: 0,0,418
+		TargetableCellAdditionalOffset: 0,0,418
 		Type: Rectangle
+			VerticalTopOffset: 762
 			TopLeft: -1024, -1536
 			BottomRight: 1024, 1536
 
 ^3x3Shape:
 	HitShape:
+		TargetableOffsets: 0,0,418
+		TargetableCellAdditionalOffset: 0,0,418
 		Type: Rectangle
+			VerticalTopOffset: 762
 			TopLeft: -1536, -1536
 			BottomRight: 1536, 1536
 
 ^2x4Shape:
 	HitShape:
+		TargetableOffsets: 0,0,418
+		TargetableCellAdditionalOffset: 0,0,418
 		Type: Rectangle
+			VerticalTopOffset: 762
 			TopLeft: -1024, -2048
 			BottomRight: 1024, 2048
 
 ^4x2Shape:
 	HitShape:
+		TargetableOffsets: 0,0,418
+		TargetableCellAdditionalOffset: 0,0,418
 		Type: Rectangle
+			VerticalTopOffset: 762
 			TopLeft: -2048, -1024
 			BottomRight: 2048, 1024
 
 ^3x4Shape:
 	HitShape:
+		TargetableOffsets: 0,0,418
+		TargetableCellAdditionalOffset: 0,0,418
 		Type: Rectangle
+			VerticalTopOffset: 762
 			TopLeft: -1536, -2048
 			BottomRight: 1536, 2048
 
 ^4x3FactoryWithBibShape:
 	HitShape:
+		TargetableOffsets: 0,0,418
+		TargetableCellAdditionalOffset: 0,0,418
 		Type: Rectangle
+			VerticalTopOffset: 762
 			TopLeft: -2048, -1536
 			BottomRight: 1024, 1536
 
 ^4x3Shape:
 	HitShape:
+		TargetableOffsets: 0,0,418
+		TargetableCellAdditionalOffset: 0,0,418
 		Type: Rectangle
+			VerticalTopOffset: 762
 			TopLeft: -2048, -1536
 			BottomRight: 2048, 1536
 
 ^4x4Shape:
 	HitShape:
+		TargetableOffsets: 0,0,418
+		TargetableCellAdditionalOffset: 0,0,418
 		Type: Rectangle
+			VerticalTopOffset: 762
 			TopLeft: -2048, -2048
 			BottomRight: 2048, 2048
 
 ^3x5Shape:
 	HitShape:
+		TargetableOffsets: 0,0,418
+		TargetableCellAdditionalOffset: 0,0,418
 		Type: Rectangle
+			VerticalTopOffset: 762
 			TopLeft: -1536, -2560
 			BottomRight: 1536, 2560
 
 ^5x3Shape:
 	HitShape:
+		TargetableOffsets: 0,0,418
+		TargetableCellAdditionalOffset: 0,0,418
 		Type: Rectangle
+			VerticalTopOffset: 762
 			TopLeft: -2560, -1536
 			BottomRight: 2560, 1536
 
 ^2x5Shape:
 	HitShape:
+		TargetableOffsets: 0,0,418
+		TargetableCellAdditionalOffset: 0,0,418
 		Type: Rectangle
+			VerticalTopOffset: 762
 			TopLeft: -1024, -2560
 			BottomRight: 1024, 2560
 
 ^2x6Shape:
 	HitShape:
+		TargetableOffsets: 0,0,418
+		TargetableCellAdditionalOffset: 0,0,418
 		Type: Rectangle
+			VerticalTopOffset: 762
 			TopLeft: -1024, -3072
 			BottomRight: 1024, 3072
 
 ^6x4Shape:
 	HitShape:
+		TargetableOffsets: 0,0,418
+		TargetableCellAdditionalOffset: 0,0,418
 		Type: Rectangle
+			VerticalTopOffset: 762
 			TopLeft: -3072, -2048
 			BottomRight: 3072, 2048
 
@@ -315,10 +372,12 @@
 		TargetTypes: Ground, Building, C4
 	HitShape:
 		UseTargetableCellsOffsets: true
+		TargetableCellAdditionalOffset: 0,0,418
 		Type: Rectangle
 			LocalYaw: -128
 			TopLeft: -512, -512
 			BottomRight: 512, 512
+			VerticalTopOffset: 762
 	Building:
 		Dimensions: 1,1
 		Footprint: x
@@ -1091,6 +1150,9 @@
 	RequiresSpecificOwners:
 		ValidOwnerNames: Neutral
 	HitShape:
+		Type: Circle
+			Radius: 164
+			VerticalTopOffset: 612
 	Health:
 		HP: 200000
 	Armor:
