--- a/mods/ts/maps/fields-of-green-test/rules.yaml
+++ b/mods/ts/maps/fields-of-green-test/rules.yaml
@@ -20,7 +20,8 @@ World:
 ^BaseWorld:
 	TerrainLighting:
 		BlueTint: 0.7
-		Intensity: 0.6
+		Intensity: 0.65
+		AmbientIntensity: 0.28
 
 INGRNLMP:
 	TerrainLightSource:
