--- a/mods/ts/rules/gdi-support.yaml
+++ b/mods/ts/rules/gdi-support.yaml
@@ -103,7 +103,7 @@ GACTWR:
 	Armament@VULCPRIMARY:
 		RequiresCondition: tower.vulcan
 		Weapon: VulcanTower
-		BurstPerFireCount: 2
+		BurstsPerFire: 2
 		LocalOffset: 588,120,784, 588,-120,784
 		MuzzleSequence: muzzle
 	Armament@ROCKET:
